feat: updates and improvements to the request payload structure for code lists (#17)