@@ -1,32 +1,26 @@
 package registre.mapper;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import registre.dto.CodesListDto;
-import registre.dto.CodesListExternalLinkDto;
-import registre.dto.MetadataDto;
+import registre.dto.*;
 import registre.entity.CodesListEntity;
 import registre.entity.CodesListExternalLinkEntity;
 
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class CodesListMapperTest {
 
     private CodesListMapper codesListMapper;
-    private ObjectMapper objectMapper;
 
     @BeforeEach
     void setUp() {
         codesListMapper = new CodesListMapper(new CodesListExternalLinkMapper());
-        objectMapper = new ObjectMapper();
     }
 
     @Test
-    void testToDto_WithValidEntity() throws Exception {
+    void testToDto_WithValidEntity() {
         // Given
         CodesListEntity codesListEntity = new CodesListEntity();
         UUID testId = UUID.randomUUID();
@@ -39,11 +33,8 @@ class CodesListMapperTest {
         externalLink.setVersion("v1");
         codesListEntity.setCodesListExternalLink(externalLink);
 
-        JsonNode searchConfig = objectMapper.readTree("{\"enabled\": true}");
-        JsonNode content = objectMapper.readTree("[{\"code\": \"01\"}]");
-
-        codesListEntity.setSearchConfiguration(searchConfig);
-        codesListEntity.setContent(content);
+        codesListEntity.setSearchConfiguration(new SearchConfig(Map.of("enabled", true)));
+        codesListEntity.setContent(new CodesListContent(List.of(Map.of("code","01"))));
 
         // When
         CodesListDto dto = codesListMapper.toDto(codesListEntity);
@@ -57,25 +48,25 @@ class CodesListMapperTest {
         assertEquals("v1", dto.metadata().version());
         assertNotNull(dto.metadata().externalLink());
         assertEquals("ExternalLink1", dto.metadata().externalLink().id());
-        assertEquals("v1", dto.metadata().externalLink().version());
-        assertTrue(dto.searchConfiguration().get("enabled").asBoolean());
-        assertEquals("01", dto.content().get(0).get("code").asText());
+
+        assertNotNull(dto.searchConfiguration());
+        assertEquals(true, dto.searchConfiguration().content().get("enabled"));
+        assertNotNull(dto.content());
+        assertEquals("01", dto.content().items().getFirst().get("code"));
     }
 
     @Test
-    void testToEntity_WithValidDto() throws Exception {
+    void testToEntity_WithValidDto() {
         // Given
         String testId1 = UUID.randomUUID().toString();
         UUID testId2 = UUID.randomUUID();
 
-        CodesListExternalLinkDto externalLink = new CodesListExternalLinkDto(testId1, "v1");
+        CodesListExternalLinkDto externalLink = new CodesListExternalLinkDto(testId1);
 
         MetadataDto metadata = new MetadataDto(testId2, "Label2", "v2", externalLink);
 
-        JsonNode searchConfig = objectMapper.readTree("{\"enabled\": false}");
-        JsonNode content = objectMapper.readTree("[{\"code\": \"01\"}]");
-
-        CodesListDto dto = new CodesListDto(testId2, metadata, searchConfig, content);
+        CodesListDto dto = new CodesListDto(testId2, metadata, new SearchConfig(Map.of("enabled", false)),
+                new CodesListContent(List.of(Map.of("code", "01"))));
 
         // When
         CodesListEntity entity = codesListMapper.toEntity(dto);
@@ -85,9 +76,8 @@ class CodesListMapperTest {
         assertEquals(testId2, entity.getId());
         assertEquals("Label2", entity.getLabel());
         assertEquals("v2", entity.getVersion());
-        assertEquals("v1", entity.getCodesListExternalLink().getVersion());
-        assertEquals(testId1, entity.getCodesListExternalLink().getId());
-        assertFalse(entity.getSearchConfiguration().get("enabled").asBoolean());
-        assertEquals("01", entity.getContent().get(0).get("code").asText());
+        // searchConfiguration and content are not set in toEntity()
+        assertNull(entity.getSearchConfiguration());
+        assertNull(entity.getContent());
     }
 }
