@@ -1,16 +1,17 @@
 package registre.service;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import registre.dto.CodesListContent;
 import registre.dto.MetadataDto;
+import registre.dto.SearchConfig;
 import registre.entity.CodesListEntity;
 import registre.repository.CodesListRepository;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -25,9 +26,6 @@ class CodesListRecoveryServiceIntegrationTest {
 
     @Autowired
     private CodesListRepository repository;
-
-    @Autowired
-    private ObjectMapper objectMapper;
 
     @BeforeEach
     void cleanDatabase() {
@@ -69,60 +67,57 @@ class CodesListRecoveryServiceIntegrationTest {
     }
 
     @Test
-    void testGetCodesListById() throws Exception {
+    void testGetCodesListById() {
         CodesListEntity codesList = new CodesListEntity();
         UUID id3 = UUID.randomUUID();
         codesList.setId(id3);
         codesList.setLabel("Label3");
         codesList.setVersion("V3");
 
-        JsonNode content = objectMapper.readTree("""
-                    [
-                        {"id": "Code1", "label": "Label1"}
-                    ]
-                """);
-        codesList.setContent(content);
+        List<Map<String,Object>> contentList = List.of(
+                Map.of("id", "Code1", "label", "Label1")
+        );
+        codesList.setContent(new CodesListContent(contentList));
 
         repository.save(codesList);
 
-        Optional<JsonNode> result = service.getCodesListById(id3);
+        Optional<CodesListContent> result = service.getCodesListById(id3);
 
         assertTrue(result.isPresent());
-        assertEquals("Code1", result.get().get(0).get("id").asText());
-        assertEquals("Label1", result.get().get(0).get("label").asText());
-        System.out.println(result.get().getClass());
-        System.out.println(result.get());
+        CodesListContent contentWrapper = result.get();
+
+        assertEquals("Code1", contentWrapper.items().getFirst().get("id"));
+        assertEquals("Label1", contentWrapper.items().getFirst().get("label"));
+
+        System.out.println(contentWrapper.getClass());
+        System.out.println(contentWrapper.items());
     }
 
     @Test
-    void testGetSearchConfiguration() throws Exception {
+    void testGetSearchConfiguration() {
         CodesListEntity codesList = new CodesListEntity();
         UUID id4 = UUID.randomUUID();
         codesList.setId(id4);
         codesList.setLabel("Label4");
         codesList.setVersion("V4");
 
-        JsonNode config = objectMapper.readTree("""
-            {
-                "filter": true
-            }
-        """);
-        codesList.setSearchConfiguration(config);
+        Map<String,Object> configMap = Map.of("filter", true);
+        codesList.setSearchConfiguration(new SearchConfig(configMap));
 
         repository.save(codesList);
 
-        Optional<JsonNode> result = service.getSearchConfiguration(id4);
+        Optional<SearchConfig> result = service.getSearchConfiguration(id4);
 
         assertTrue(result.isPresent());
-        assertTrue(result.get().get("filter").asBoolean());
+        SearchConfig configWrapper = result.get();
+
+        assertEquals(true, configWrapper.content().get("filter"));
     }
 
     @Test
     void testGetSearchConfiguration_NotFound() {
         UUID id = UUID.randomUUID();
-        Optional<JsonNode> result = service.getSearchConfiguration(id);
-
+        Optional<SearchConfig> result = service.getSearchConfiguration(id);
         assertTrue(result.isEmpty());
     }
-
 }
